...
        navigationItem.rightViews = [rate]
    }

    private func setupAddAccountButton() {
        addAccountButton.backgroundColor = Colors.accentColor

        let image = UIImage(named: "ic_add")?.withRenderingMode(.alwaysTemplate)
        addAccountButton.setImage(image, for: .normal)
        addAccountButton.setImage(image, for: .selected)

        addAccountButton.tintColor = Colors.white

        addAccountButton.pulseColor = .white
...
